# axum-bootstrap

./: Cargo.toml
public/css/: styles.css  styles.min.css
src/: handler.rs  main.rs
templates/: base.html  index.html
templates/icons/: download.html  plus-3x.html  xmark.html
